data/collection/fixes/descriptions/kotlin/KT-37058
```
interface A
interface B

fun foo(a: A) {}
fun foo(b: B) {}

fun bar(a: A) {}

val l: (A) -> Unit
    get() =
        if (1 < 2) {
            ::foo
        } else {
            ::bar
        }
```

```
main.kt:12:15: error: overload resolution ambiguity:
public fun foo(a: A): Unit defined in root package in file main.kt
public fun foo(b: B): Unit defined in root package in file main.kt
            ::foo
              ^
```

Extracted from https://github.com/JetBrains/kotlin/blob/af5a381c2b81d369389a77902d061849214254c2/libraries/tools/kotlin-gradle-plugin/src/main/kotlin/org/jetbrains/kotlin/gradle/tasks/Tasks.kt#L588